# purikura

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  example.env  kiminonaha.py  main.py  pyproject.toml  remove_gb.py  settings.py  test.py
kiminonaha/: generate.py
smash/: generate.py  smash.py
spcconverter/: __init__.py  main.py  remove_gb.py  settings.py
spcconverter/kiminonaha/: __init__.py  kiminonaha.py
spcconverter/smash/: __init__.py  smash.py
spcconverter/tane_faceswap/: README.md  generate.py
spcconverter/utils/: call_inf_server.py  remove_gb.py  resize.py  super_resolution.py
tane-faceswap/: generate.py
tane_faceswap/: generate.py
